--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,20 @@ html {
     margin-bottom: 40px;
   }
   footer {
+    margin-top: 5em;
     background-color: black;
-    position: absolute;
     bottom: 0;
     width: 100%;
     height: 300px;
     color: white;
   }
+
+img{
+  max-height: 20em ;
+}
+#carouselExampleIndicators{
+  margin: 2.5em 0em 10em 0em; 
+}
+#cat .card{
+  border: none;
+}
