--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -1,71 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-
-        <!-- Bootstrap core CSS -->
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
-        <!-- Custom fonts for this template -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/5.0.4/css/grayscale.min.css" rel="stylesheet">
-
-        <link rel="stylesheet" href="styles.css">
-
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-    </head>
-    <body>
-        <!-- Header -->
-        <nav class="navbar navbar-light bg-light" style="padding: 1em">
-
-
-          <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
-
-          <form class="form-inline">
-              <div style="margin: 0 1em 0 0em">
-                <a href="">Admin
-                    <i class="fas fa-user fa-lg"></i>
-                </a>
-              </div>
-
-              <input class="form-control mr-sm-2" type="search" placeholder="Camaras, lentes, tripies" aria-label="Search">
-              <a href=""><i class="fas fa-search"></i></a>
-          </form>
-
-      </nav>
-
-        <!-- Navigation -->
-        <ul class="nav nav-tabs justify-content-center" style="margin-top: 1em">
-          <li class="nav-item">
-              <a class="nav-link" href="/">Inicio</a>
-            </li>
-             <li class="nav-item dropdown">
-            </div>
-              <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Productos</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Camaras</a>
-              <a class="dropdown-item" href="#">Lentes</a>
-              <a class="dropdown-item" href="#">Tripies</a>
-              <a class="dropdown-item" href="#">Accesorios</a>
-              <a class="dropdown-item" href="#">Flashes</a>
-              <a class="dropdown-item" href="#">Fotografias</a>
-            </div>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Camaras</a>
-              <a class="dropdown-item" href="#">Lentes</a>
-            </div>
-          </li>
-            <li class="nav-item">
-                    <a class="nav-link active" href="/admin">Administrador</a>
-            </li>
-        </ul>
+<% include ../partials/header.ejs %>
+    <script>
+        if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1")
+          location.href = "/login"
+      </script> 
         <!-- Body -->
         <div class="container">
             <div class="row" style="margin-top: 3.5em;">
