--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,55 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
+<% include partials/header.ejs %>
 
-        <!-- Bootstrap core CSS -->
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
-        <!-- Custom fonts for this template -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/5.0.4/css/grayscale.min.css" rel="stylesheet">
-
-        <link rel="stylesheet" href="styles.css">
-
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-    </head>
-    <body>
-        <!-- Header -->
-        <nav class="navbar navbar-light bg-light justify-content-center" style="padding: 1em">
-
-          <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
-        </nav>
-
-        <!-- Navigation -->
-        <ul class="nav nav-tabs justify-content-center" style="margin-top: 1em">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Inicio</a>
-          </li>
-           <li class="nav-item dropdown">
-          </div>
-            <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Productos</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Camaras</a>
-            <a class="dropdown-item" href="#">Lentes</a>
-            <a class="dropdown-item" href="#">Tripies</a>
-            <a class="dropdown-item" href="#">Accesorios</a>
-            <a class="dropdown-item" href="#">Flashes</a>
-            <a class="dropdown-item" href="#">Fotografias</a>
-          </div>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Camaras</a>
-              <a class="dropdown-item" href="#">Lentes</a>
-            </div>
-          </li>
-        </ul>
         <!-- Body -->
         <div class="container justify-content-center" style="margin-top: 2em;">
           <div class="row justify-content-center">
@@ -77,17 +27,44 @@
         </div>
 
         <script type="text/javascript">
+          const Toast = Swal.mixin({
+            toast: true,
+            position: 'top-end',
+            showConfirmButton: false,
+            timer: 3000
+          });
+
+          
+
           var login = function(){
             var Nombre = document.getElementById("Nombre").value
-            var Contraseña = document.getElementById("Contraseña").value
+            var Contraseña = document.getElementById("Contraseña").value 
+            var res
 
             if (Nombre === "admin" && Contraseña === "1234" || Nombre === "admin2" && Contraseña === "1234") {
               location.href = "/admin"
             }
             else {
-              location.href ="/admin/api/cliente/"+Nombre+"/"+Contraseña
+
+              var xmlHttp = new XMLHttpRequest()
+              xmlHttp.open("GET", "/admin/api/login/"+Nombre+"/"+Contraseña, false)
+              xmlHttp.send(null)
+              res = JSON.parse(xmlHttp.response)
+
+              if(res.success == true){
+                localStorage.setItem('user', Nombre)
+                localStorage.setItem('pass', Contraseña)
+
+                location.href = "/"
+              }
+              else 
+                Toast.fire({
+                  type: 'error',
+                  title: 'Usuario incorrecto'
+                })            
             }
           }
          </script>
         <!-- Footer -->
 <% include partials/footer.ejs %>
+
