--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,8 +42,8 @@
             var res
 
             if (Nombre === "admin" && Contraseña === "1234" || Nombre === "admin2" && Contraseña === "1234") {
-              localStorage.setItem('user', Nombre)
-              localStorage.setItem('pass', Contraseña)
+              localStorage.setItem('user', "admin")
+              localStorage.setItem('pass',  "1234")
               location.href = "/admin"
             }
             else {
