--- a/views/admin/clients.ejs
+++ b/views/admin/clients.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 <script>
-    if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1")
+    if(localStorage.getItem('user') =! "admin" || localStorage.getItem('user') =! "admin1")
       location.href = "/login"
   </script> 
         <!-- Body -->
@@ -13,7 +13,6 @@
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Email</th>
-                        <th scope="col">Contraseña</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -22,7 +21,6 @@
                             <td><%= i+1 %></td>
                             <td><%= rows[i].Nombre %></td>
                             <td><%= rows[i].Email %></td>
-                            <td><%= rows[i].Contraseña %></td>
                           </tr>
                         <% } %>
                     </tbody>
@@ -41,7 +39,10 @@
                             </div>
                             <div class="form-group col">
                               <label for="Contraseña">Contraseña</label>
-                              <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña">
+                              <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña" aria-describedby="passwordHelpBlock">
+                              <small id="passwordHelpBlock" class="form-text text-muted">
+                                Elige una contraseña segura.
+                              </small>
                           </div>
                         </div>
                         <div class="form-group">
