--- a/views/admin/providers.ejs
+++ b/views/admin/providers.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 <script>
-    if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1")
+    if(localStorage.getItem('user') =! "admin" || localStorage.getItem('user') =! "admin1")
       location.href = "/login"
   </script> 
         <!-- Body -->
@@ -66,7 +66,7 @@
                     </div>
                     <div class="form-group col-md-4">
                         <label for="Tipo_Producto">Tipo producto</label>
-                        <input type="text" class="Tipo_Producto" id="Tipo_Producto" name="Tipo_Producto">
+                        <input type="text" class="form-control" id="Tipo_Producto" name="Tipo_Producto">
                     </div>
                     </div>
 
