--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 <script>
-    if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1")
+    if(localStorage.getItem('user') =! "admin" || localStorage.getItem('user') =! "admin1")
       location.href = "/login"
   </script> 
         <!-- Body -->
@@ -34,7 +34,10 @@
                     </div>
                     <div class="form-group">
                       <label for="Contraseña">Contraseña</label>
-                      <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña">
+                      <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña" aria-describedby="passwordHelpBlock">
+                      <small id="passwordHelpBlock" class="form-text text-muted">
+                       Elige una contraseña segura
+                      </small>
                     </div>
                     <br>
                     <center>
