--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
         <!-- Body -->
         <br>
         <br><br><br>
-        <div id="titulos"><center><h2> Archivo no encnotrado </h2> </center></div>
+        <div id="titulos"><center><h2> Archivo no encontrado </h2> </center></div>
          <br>
 
 
