--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.2.0/dist/bootstrap-validate.js"></script>
         <!-- Bootstrap core CSS -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +23,14 @@
         <title>D2 Store</title>
     </head>
     <body>
+    <script>
+      const Toast = Swal.mixin({
+              toast: true,
+              position: 'top-end',
+              showConfirmButton: false,
+              timer: 3000
+            });
+    </script>
         <!-- Header -->
         <nav class="navbar navbar-light bg-light" style="padding: 1em">
           <a class="navbar-brand">Encuentranos <i class="fas fa-map-marker-alt"></i></a>
