--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -12,7 +12,10 @@
                   </div>
                   <div class="form-group">
                     <label for="Contraseña">Contraseña</label>
-                    <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña">
+                    <input type="password" class="form-control" id="Contraseña" placeholder="Contraseña" name="Contraseña" aria-describedby="passwordHelpBlock">
+                    <small id="passwordHelpBlock" class="form-text text-muted">
+                      Crea una contraseña segura, No te preocupes la podras cambiar mas adelante.
+                    </small>
                   </div>
                   <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="Terms">
