--- a/views/admin/clients.ejs
+++ b/views/admin/clients.ejs
@@ -88,7 +88,8 @@
                         </div>
                     <br>
                     <center>
-                      <button type="submit" class="btn btn-primary">Editar/Agregar</button>
+                      <button type="button" class="btn btn-primary" onclick="agregar()">Agregar</button>
+                      <button type="button" class="btn btn-primary" onclick="editar()">Editar</button>
                       <button type="button" class="btn btn-danger" onclick="eliminar()">Eliminar</button>
                     </center>
                   </form>
@@ -97,9 +98,19 @@
         </div>
 
         <script type="text/javascript">
-        var id;
+        var id = null
         var eliminar = function(){
           location.href = "/admin/cliente/delete/" + id
+        }
+        var editar = function(){
+          var xhttp = new XMLHttpRequest()
+              xhttp.open("POST", "/admin/cliente/update", true);
+              xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+              xhttp.send("_id="+ id +"&Nombre="+ document.getElementById("Nombre").value +"&Contraseña="+ document.getElementById("Contraseña").value +"&Email="+ document.getElementById("Email").value+"&Direccion="+ document.getElementById("Direccion").value +"&Telefono="+document.getElementById("Telefono").value+"&Turno="+ document.getElementById("Turno").value +"&Fecha_Ingreso="+ document.getElementById("Fecha_Ingreso").value +"&Edad="+ document.getElementById("Edad").value +"&Cargo_Area="+ document.getElementById("Cargo_Area").value +"&Sueldo="+ document.getElementById("Sueldo").value +"&Sexo="+ document.getElementById("Sexo").value );
+              xhttp.abort()
+
+              location.href = "/admin/clients"
+              
         }
 
           var selectCliente = function(User){
@@ -115,6 +126,40 @@
             document.getElementById("Cargo_Area").value = User.Cargo_Area
             document.getElementById("Sueldo").value = User.Sueldo
             document.getElementById("Sexo").value = User.Sexo
+          }
+
+          var isValid = []
+
+          bootstrapValidate("#Nombre", 'alpha:Solo puedes usar letras', function(valid){isValid[0] = valid})
+          bootstrapValidate("#Email", 'email:Ingresa un email valido',  function(valid){isValid[1] = valid})
+          bootstrapValidate("#Telefono", 'integer:Solo numeros',  function(valid){isValid[2] = valid})
+          bootstrapValidate("#Telefono", 'max:10:Maximo 10 digitos',  function(valid){isValid[3] = valid})
+          bootstrapValidate("#Turno", 'required:Te falto este',  function(valid){isValid[4] = valid})
+          bootstrapValidate("#Fecha_Ingreso", 'required:Te falto este',  function(valid){isValid[5] = valid})
+          bootstrapValidate("#Cargo_Area", 'required:Te falto este',  function(valid){isValid[6] = valid})
+          bootstrapValidate("#Sueldo", 'required:Te falto este',  function(valid){isValid[7] = valid})
+          bootstrapValidate("#Sexo", 'required:Te falto este',  function(valid){isValid[8] = valid})
+          bootstrapValidate("#Direccion", 'required:Te falto este',  function(valid){isValid[9] = valid})
+          bootstrapValidate("#Contraseña", 'required:Te falto este',  function(valid){isValid[10] = valid})
+          bootstrapValidate("#Edad", 'required:Te falto este',  function(valid){isValid[11] = valid})
+
+          function agregar(){
+            if(isValid[0] && isValid[1] && isValid[2] && isValid[3] && isValid[4] && isValid[5] && isValid[6] && isValid[7] && isValid[8] && isValid[9] && isValid[10] && isValid[11])
+            {
+              var xhttp = new XMLHttpRequest()
+              xhttp.open("POST", "/admin/cliente", true);
+              xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+              xhttp.send("Nombre="+ document.getElementById("Nombre").value +"&Contraseña="+ document.getElementById("Contraseña").value +"&Email="+ document.getElementById("Email").value+"&Direccion="+ document.getElementById("Direccion").value +"&Telefono="+document.getElementById("Telefono").value+"&Turno="+ document.getElementById("Turno").value +"&Fecha_Ingreso="+ document.getElementById("Fecha_Ingreso").value +"&Edad="+ document.getElementById("Edad").value +"&Cargo_Area="+ document.getElementById("Cargo_Area").value +"&Sueldo="+ document.getElementById("Sueldo").value +"&Sexo="+ document.getElementById("Sexo").value );
+              xhttp.abort()
+
+              location.href = "/admin/clients"
+            }
+            else
+            Toast.fire({
+                  type: 'error',
+                  title: 'Todos los campos deben estar correctos o el usuario ya existe'
+                })
+
           }
         </script>
         <!-- Footer -->
