--- a/views/admin/employees.ejs
+++ b/views/admin/employees.ejs
@@ -102,7 +102,7 @@
         </div>
 
         <script type="text/javascript">
-        var id;
+        var id = null
         var eliminar = function(){
           location.href = "/admin/empleado/delete/" + id
         }
