--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -41,7 +41,8 @@
                     </div>
                     <br>
                     <center>
-                      <button type="submit" class="btn btn-primary">Editar/Agregar</button>
+                      <button type="button" class="btn btn-primary" onclick="agregar()">Agregar</button>
+                      <button type="button" class="btn btn-primary" onclick="editar()">Editar</button>
                       <button type="button" class="btn btn-danger" onclick="eliminar()">Eliminar</button>
                     </center>
                   </form>
@@ -49,15 +50,50 @@
             </div>
         </div>
         <script type="text/javascript">
-        var id;
-        var eliminar = function(){ 
+        var id = null
+        var eliminar = function(){
           location.href = "/admin/usuario/delete/" + id
+        }
+        var editar = function(){
+          var xhttp = new XMLHttpRequest()
+              xhttp.open("POST", "/admin/usuario/update", true);
+              xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+              xhttp.send("_id="+ id +"&Nombre="+ document.getElementById("Nombre").value +"&Contraseña="+ document.getElementById("Contraseña").value);
+              xhttp.abort()
+
+              location.href = "/admin/users"
+              
         }
 
           var selectCliente = function(User){
             id = User._id
             document.getElementById("Nombre").value = User.Nombre
             document.getElementById("Contraseña").value = User.Contraseña
+
+          }
+
+          var isValid = []
+
+          bootstrapValidate("#Nombre", 'alpha:Solo puedes usar letras', function(valid){isValid[0] = valid})
+          bootstrapValidate("#Contraseña", 'required:Ingresa una contraseña',  function(valid){isValid[1] = valid})
+         
+
+        function agregar(){
+            if(isValid[0] && isValid[1])
+            {
+              var xhttp = new XMLHttpRequest()
+              xhttp.open("POST", "/admin/usuario", true);
+              xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+              xhttp.send("Nombre="+ document.getElementById("Nombre").value +"&Contraseña="+ document.getElementById("Contraseña").value);
+              xhttp.abort()
+
+              location.href = "/admin/users"
+            }
+            else
+            Toast.fire({
+                  type: 'error',
+                  title: 'Todos los campos deben estar correctos o el usuario ya existe'
+                })
 
           }
         </script>
