--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -91,5 +91,9 @@
                 </div>
             </div>
         </div>
+        <script>
+        if(localStorage.getItem('user') =! "admin" || localStorage.getItem('user') =!    "admin1")
+          location.href = "/login"
+      </script> 
         <!-- Footer -->
 <% include ../partials/footer.ejs %>
