--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
     <script>
-        if(localStorage.getItem('user') =! "admin" || localStorage.getItem('user') =!    "admin1")
+        if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') !=    "admin1")
           location.href = "/login"
       </script> 
         <!-- Body -->
