--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,7 +1,9 @@
 <% include ../partials/header.ejs %>
 <script>
-    if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1" || localStorage.getItem('user') == null)
+    if(localStorage.getItem('user') != "admin" || localStorage.getItem('user') != "admin1")
       location.href = "/login"
+     else
+        location.href ="/admin"
   </script> 
         <!-- Body -->
         <div class="container" style="margin-top: 3em;">
