--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,5 +1,10 @@
 <% include ../partials/header.ejs %>
-
+      <script>
+       if(localStorage.getItem('user') === "admin" || localStorage.getItem('user') === "admin1")
+        location.href = "/admin"
+       else
+        location.href ="/login"
+       </script> 
         <!-- Body -->
         <div class="container" style="margin-top: 3em;">
             <div class="row" >
@@ -94,12 +99,5 @@
 
           }
         </script>
-        
-        <script>
-    if(localStorage.getItem('user') == "admin" || localStorage.getItem('user') == "admin1")
-      location.href = "/admin"
-     else
-        location.href ="/login"
-  </script> 
         <!-- Footer -->
 <% include ../partials/footer.ejs %>
