--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,9 +1,11 @@
 <% include ../partials/header.ejs %>
       <script>
-       if(localStorage.getItem('user') === "admin" || localStorage.getItem('user') === "admin1")
-        location.href = "/admin"
+      var user  = localStorage.getItem('user')
+       if(user === "admin" || user === "admin1")
+        {location.href = "/admin"
+        }
        else
-        location.href ="/login"
+        {location.href ="/login"}
        </script> 
         <!-- Body -->
         <div class="container" style="margin-top: 3em;">
