--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,5 +1,9 @@
 <% include ../partials/header.ejs %>
-
+        <script>
+            if(localStorage.getItem('user') == 'admin'){}
+            else
+                location.href = "/"
+        </script>
         <!-- Body -->
         <div class="container" style="margin-top: 3em;">
             <div class="row" >
