--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,13 +37,22 @@
 
           <center><h3>Dedos tienda</h3></center>
           <form class="form-inline">
-              <div id="tag">
-                  
-              </div>
+              <div id="tag1"></div>
+              <div id="tag" style="margin-left: 1em;"></div>
+              
+              <!-- <div class="dropdown">
+                <a class="dropdown-toggle" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fas fa-shopping-cart fa-2x"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownUser">
+                </div>
+              </div> -->
 
               <script>
-                if(localStorage.getItem('user') != null)
+                if(localStorage.getItem('user') != null){
                   document.getElementById('tag').innerHTML = '<div class="dropdown"><a class="dropdown-toggle" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-2x"></i></a><div class="dropdown-menu" aria-labelledby="dropdownUser"><a class="dropdown-item" href="#">Ver perfil</a><a class="dropdown-item" href="#">Editar Perfil</a><a class="dropdown-item" onclick="logout()">Cerrar sesion</a></div></div>'
+                  document.getElementById('tag1').innerHTML = '<div class="dropdown"><a class="dropdown-toggle" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart fa-2x"></i></a><div class="dropdown-menu" aria-labelledby="dropdownUser"></div></div>'
+                }
                 else
                   document.getElementById('tag').innerHTML = '<a href="/signin">Sing in</a><a href="">/</a><a href="/login">Log in</a>'
 
