--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
         <!-- Custom styles for this template -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/5.0.4/css/grayscale.min.css" rel="stylesheet">
 
-        <!-- <link rel="stylesheet" href="styles.css"> -->
+        <link rel="stylesheet" href="styles.css">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
